2007-02-07  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  New version.

2007-02-06  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/f7.py (F7Handler.Key.__str__):  Add a newline.
	* pykickstart/commands/rhel5.py (RHEL5Handler.Key.__str__):  Likewise.

	* pykickstart/constants.py:  Add network bootproto constants (#197694).
	* pykickstart/commands/fc3.py:  Use new network constants.
	* pykickstart/commands/fc4.py:  Likewise.
	* pykickstart/commands/fc6.py:  Likewise.
	* pykickstart/commands/rhel4.py:  Likewise.

2007-02-01  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/fc4.py:  Fix tracebacks in subclass __str__
	methods (#226734).
	* pykickstart/commands/rhel4.py:  Likewise.

2007-01-31  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec:  Modified to more closely match the extras
	packaging guidelines.

2007-01-25  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  New version.

2007-01-24  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/fc3.py:  Added.
	* pykickstart/commands/fc4.py:  Move basic commands and data back to
	FC3.

	* pykickstart/commands/rhel4.py:  Added.

	* pykickstart/version.py:  Add support for FC3 and RHEL4.

	* pykickstart/commands/fc4.py (FC4Handler.__init__):  Use
	overrideCommand instead of registerCommand.
	* pykickstart/commands/fc5.py (FC5Handler.__init__):  Likewise.
	* pykickstart/commands/fc6.py (FC6Handler.__init__):  Likewise.

2007-01-24  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/fc6.py (FC6Handler.Key):  FC6 didn't support
	the key command.
	* pykickstart/commands/f7.py (F7Handler.Key):  The key command was
	added just after FC6 came out.

	* pykickstart/commands/rhel5.py:  Added.

	* pykickstart/version.py:  Add support for RHEL5.  Be more permissive
	in what sorts of strings we map to version numbers.  Fix pychecker
	warnings.

2007-01-19  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  New version.
